# airline-fare-finder

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml  drift-weekly.yml  fares-daily.yml
config/searches/: sea-ccu.yaml  sea-lih  sea-lih.yaml
data/: .gitkeep
data/history/sea-ccu/: 2026-07-08T143458Z.json  2026-07-08T165226Z.json  2026-07-09T152348Z.json  2026-07-09T155443Z.json  2026-07-09T173426Z.json  2026-07-10T144020Z.json  2026-07-10T171020Z.json  2026-07-11T160949Z.json  2026-07-12T161304Z.json  2026-07-13T172742Z.json  2026-07-14T143318Z.json  2026-07-14T163027Z.json  2026-07-15T163720Z.json  2026-07-16T140832Z.json  2026-07-16T163139Z.json  2026-07-17T162915Z.json  2026-07-18T161147Z.json  2026-07-19T161119Z.json  2026-07-20T163802Z.json  2026-07-21T163656Z.json  2026-07-22T140810Z.json  2026-07-22T162533Z.json  2026-07-23T164220Z.json  2026-07-24T164901Z.json
data/history/sea-lih/: 2026-07-22T162621Z.json  2026-07-23T164308Z.json  2026-07-24T164949Z.json
data/latest/: sea-ccu.json  sea-lih.json
scripts/: set-secrets.ps1
src/farefinder/: __init__.py  __main__.py  config.py  dates.py  history.py  models.py  report.py  search.py
src/farefinder/providers/: __init__.py  amadeus.py  travelpayouts.py  (+1 more)
tests/: test_amadeus_provider.py  test_cli.py  test_config.py  test_dates.py  test_google_provider.py  test_history.py  test_live_smoke.py  test_report.py  test_search.py  test_travelpayouts_provider.py
tests/fixtures/: amadeus_sea_ccu.json  google_sea_ccu_items.json  travelpayouts_sea_ccu.json
