[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "farefinder"
version = "0.1.0"
description = "Config-driven cheapest airline fare finder (Amadeus + Google Flights)"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "live: tests that hit real external APIs (skipped unless creds/opt-in present)",
]
